# morphogen

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM_MAP.md  LICENSE  QUICK_REFERENCE_GUIDE.txt  README.md  SECURITY.md  SPECIFICATION.md  STATUS.md  claude.md  pyproject.toml  requirements.txt  setup.py  simple_synth.morph.json  test_cellular_quick.py  test_diagnosis.py  test_filter_state_continuity.py  test_new_examples.py  test_operator_integration.py  test_output.txt  test_proper_patterns.py  test_use_demo.py  test_vcf_filters.py
.github/workflows/: tests.yml
archive/: DOCUMENTATION_IMPROVEMENTS.md.archived  EXAMPLE_PORTFOLIO_PLAN.md.archived  README.md  professional-domains.md.archived
benchmarks/: field_operations_benchmark.py  jit_aot_benchmark.py
docs/: CIRCUIT_DOMAIN_IMPLEMENTATION.md  CROSS_DOMAIN_API.md  CROSS_DOMAIN_MESH.dot  DOCUMENTATION_INDEX.md  DOMAINS.md  DOMAIN_VALUE_ANALYSIS.md  MUSIC_DOCUMENTATION_INDEX.md  README.md  getting-started.md  troubleshooting.md
docs/adr/: 001-unified-reference-model.md  002-cross-domain-architectural-patterns.md  003-circuit-modeling-domain.md  004-instrument-modeling-domain.md  005-emergence-domain.md  006-chemistry-domain.md  007-gpu-first-domains.md  013-music-stack-consolidation.md  (+6 more)
examples/: 01_hello_heat.kairo  01_hello_heat.morph  02_pulsing_circle.morph  03_wave_ripples.morph  04_random_walk.morph  05_gradient_flow.morph  10_heat_equation.kairo  10_heat_equation.morph  11_gray_scott.kairo  11_gray_scott.morph  20_bouncing_spheres.morph  21_voronoi_heat.morph  22_delaunay_terrain.morph  23_geometry_patrol.kairo  23_geometry_patrol.morph  24_mesh_morphing.kairo  24_mesh_morphing.morph  25_convex_hull_art.morph  README.md  acoustics_waveguide_demo.py  advanced_visualization_showcase.py  audio_dsp_spectral.py  audio_io_demo.py  cross_domain_field_agent_coupling.py  filter_state_demo.py  generate_portfolio_outputs.py  geometry_enhancements_demo.py  graph_visualization_demo.py  heat_diffusion_animated.ccdsl  interactive_diffusion.py  mlir_poc.py  multirate_synth.py  mvp_simple_test.py  mvp_test_simple.ccdsl  phase2_field_operations.py  phase3_temporal_execution.py  phase4_agent_operations.py  phase5_audio_operations.py  phase6_jit_aot_compilation.py  phase_space_visualization_demo.py  (+18 more)
morphogen/: __init__.py  cli.py
scripts/: README.md  gh.py  reveal.py  reveal.sh
tests/: __init__.py  conftest.py  test_acoustics.py  test_agent_dialect.py  test_agents_basic.py  test_agents_forces.py  test_agents_integration.py  test_agents_operations.py  test_ast_visitors.py  test_audio_analysis.py  test_audio_basic.py  test_audio_buffer_ops.py  test_audio_dialect.py  test_audio_effects.py  test_audio_envelopes.py  test_audio_filters.py  test_audio_integration.py  test_audio_io.py  test_audio_physical.py  test_audio_spectral.py  test_cellular_operations.py  test_chemistry_cluster.py  test_chemistry_domains.py  test_circuit.py  test_cli.py  test_cross_domain_interface.py  test_cross_domain_parser.py  test_domain_registry.py  test_examples_v0_3_1.py  test_field_dialect.py  test_field_operations.py  test_flappy.py  test_fluid_jet.py  test_genetic.py  test_geometry.py  test_geometry_benchmarks.py  test_instrument_model.py  test_integration.py  test_integrators.py  test_io_integration.py  (+36 more)
tools/: migrate_to_operators.py  visualize_mesh.py
(+336 files in other folders)
